--- a/wayfire.ini
+++ b/wayfire.ini
@@ -1,8 +1,3 @@
-; wayfire-dotfiles Copyright (C) 2025 kernaltrap8
-; This program comes with ABSOLUTELY NO WARRANTY
-; This is free software, and you are welcome to redistribute it
-; under certain conditions
-
 [alpha]
 min_value = 0.100000
 modifier = <alt> <super> 
@@ -131,8 +126,8 @@ binding_logout = <super> KEY_ESC
 binding_mute = KEY_MUTE
 binding_screenshot = <shift> <super> KEY_SYSRQ
 binding_screenshot_interactive = <shift> KEY_SYSRQ
-command_0 = $HOME/.config/waybar/spotify.sh control playpause
-command_1 = $HOME/.config/waybar/spotify.sh control next
+command_0 = $HOME/.config/waybar/mediaplayer.sh control playpause
+command_1 = $HOME/.config/waybar/mediaplayer.sh control next
 command_10 = $HOME/scripts/change-audio-devices.sh swap_to_speakers
 command_11 = $HOME/scripts/change-audio-devices.sh swap_to_headphones
 command_12 = playerctl -p firefox play-pause
@@ -143,7 +138,7 @@ command_16 = killall -SIGUSR1 waybar
 command_17 = rofi -show emoji
 command_18 = $HOME/scripts/mute-input-devices.sh
 command_19 = pkill wezterm && pkill wezterm
-command_2 = $HOME/.config/waybar/spotify.sh control previous
+command_2 = $HOME/.config/waybar/mediaplayer.sh control previous
 command_20 = $HOME/scripts/disable-output.sh DP-3
 command_3 = echo b | sudo tee /proc/sysrq-trigger
 command_4 = pkill wayfire
