add wallpaper & krita source file Signed-off-by: kernaltrap <kernaltrap@gmail.com>

--- a/wf-shell.ini
+++ b/wf-shell.ini
@@ -1,29 +1,9 @@
-; wayfire-dotfiles Copyright (C) 2025 kernaltrap8
-; This program comes with ABSOLUTELY NO WARRANTY
-; This is free software, and you are welcome to redistribute it
-; under certain conditions
-
 [background]
 cycle_timeout = 150
 fade_duration = 1000
 fill_mode = stretch
-#image = /home/charlotte/Desktop/wallpapers/autumn-bliss.png
-#image = /home/charlotte/Desktop/wallpapers/2726697.jpg
-#image = /home/charlotte/Desktop/wallpapers/848899-3502601671.jpg
-#image = /home/charlotte/Desktop/wallpapers/GWZuSfaXYAAAp0w.jpg
-#image = /home/charlotte/Pictures/beast/noband/untitled-f002243.png
-#image = /home/charlotte/Pictures/judy.png
-#image = /home/charlotte/Desktop/wallpapers/blue.png
-#image = /home/charlotte/Pictures/beast.png
-#image = /home/charlotte/Pictures/house-sus.jpg
-#image = /home/charlotte/WarframePictures/20250118193124_1.jpg
-#image = /home/charlotte/Pictures/gooning.png
-image = /home/charlotte/Desktop/wallpapers/galaxy_compressed.png
-#image = /home/charlotte/Desktop/wallpapers/linux-spongebob.png
-#image = /home/charlotte/Pictures/squid_original.jpg
-#image = /home/charlotte/Pictures/sponge_small.png
-#image = /home/charlotte/Desktop/wallpapers/muons-4k-landscape-t5.12.png
-preserve_aspect = false 
+image = /home/charlotte/.config/wayfire/wallpapers/galaxy.png
+preserve_aspect = false
 randomize = true
 
 [dock]
